Added ALL Advancements and added Start at CP option

--- a/src/main/resources/strings-en.yml
+++ b/src/main/resources/strings-en.yml
@@ -103,9 +103,9 @@ achievement_unlocked: "&a&lUnlocked!"
 achievement_locked: "&c&lNot unlocked!"
 achievement_unlock_rate: "Unlock Rate: "
 achievement_playingfavorites: "Playing Favorites"
-achievement_playingfavorites_desc: "Beat the same course 10 times in a row."
+achievement_playingfavorites_desc: "Beat the same course 10 times in a row"
 achievement_thejourneybegins: "The Journey Begins"
-achievement_thejourneybegins_desc: "Beat the tutorial."
+achievement_thejourneybegins_desc: "Beat the tutorial"
 achievement_you_unlocked: "&8[&a*&8] &7You have completed the achievement {0}&7!"
 season_created: "&8[&a*&8] {1}&lSeason {0} &7created!"
 season_edited: "&8[&a*&8] {1}&lSeason {0} &7edited!"
@@ -392,7 +392,7 @@ shiny_unlocked: "&8[&a*&8] &a{0} &7found the shiny {1} &7tag!"
 wr_achieved: "&8[&a*&8] &a{0} &7achieved the &aWorld Record &7on {1}&7!"
 tag_unlocked: "&8[&a*&8] &a{0} &7has unlocked the {1}&7tag!"
 achievement_wheredyougo: "Where'd You Go"
-achievement_wheredyougo_desc: "Be AFK for 10 hours."
+achievement_wheredyougo_desc: "Be AFK for 10 hours"
 pk_tagsign_help: "&8[&c*&8] &cUsage&7: /pk tagsign &cid"
 tagsign_created: "&8[&a*&8] &7Tag Sign/Plate &acreated&7!"
 help_command_commands_1: [ "&8&m-------------&r&8[&e&lCommands&r&8]&8&m-------------\n",
@@ -423,3 +423,30 @@ timed_restart_seconds: "&8[&c*&8] &7The server will restart in &c{0} &7seconds!"
 timed_restart_second: "&8[&c*&8] &7The server will restart in &c{0} &7second!"
 timed_restarting: "&8[&c*&8] &7The server is &crestarting&7!"
 pk_season_setname_help: "&8[&c*&8] &7Usage: /pk season setname &cid name &7(Name is one word)"
+achievement_addingsomeflavor: "Adding Some Flavor"
+achievement_addingsomeflavor_desc: "Beat the green colored rankups"
+achievement_globaldomination: "Global Domination"
+achievement_globaldomination_desc: "Beat all four \"World of _\" courses"
+achievement_lawabidingcitizen: "Law Abiding Citizen"
+achievement_lawabidingcitizen_desc: "Testify in court"
+achievement_notapyramidscheme: "Not a Pyramid Scheme"
+achievement_notapyramidscheme_desc: "Beat \"Melonaire\" in over an hour"
+achievement_publicpolicyinfluencer: "Public Policy Influencer"
+achievement_publicpolicyinfluencer_desc: "Find the secret room in the lobby"
+achievement_flavortown: "Flavortown"
+achievement_flavortown_desc: "Beat at least one course of each difficulty"
+achievement_ign: "IGN"
+achievement_ign_desc: "Beat a difficulty 10 course"
+achievement_matchless: "Matchless"
+achievement_matchless_desc: "Beat Muteki in under 250 CPs"
+achievement_allstar: "All-Star"
+achievement_allstar_desc: "Beat NBA without using checkpoints"
+achievement_first: "FIRST!"
+achievement_first_desc: "Be the first on after a reset"
+achievement_heatingup: "Heating Up"
+achievement_heatingup_desc: "Beat the yellow colored rankups"
+achievement_marvelousmaker: "Marvelous Maker"
+achievement_marvelousmaker_desc: "Beat five courses by one maker"
+achievement_thatsgottahurt: "That's Gotta Hurt..."
+achievement_thatsgottahurt_desc: "Fall in the brown pit in Iro"
+options_startatcp: "&6&lStart at CP"
