Added three new commands:  - /pk xp grant user xp  - /pk xp revoke user xp  - /pk xp set user xp

--- a/src/main/resources/strings-en.yml
+++ b/src/main/resources/strings-en.yml
@@ -450,3 +450,10 @@ achievement_marvelousmaker_desc: "Beat five courses by one maker"
 achievement_thatsgottahurt: "That's Gotta Hurt..."
 achievement_thatsgottahurt_desc: "Fall in the brown pit in Iro"
 options_startatcp: "&6&lStart at CP"
+pk_xp_help: "&8[&c*&8] &cUsage&7: /pk xp grant/revoke/set &cplayer xp"
+pk_xp_grant_help: "&8[&c*&8] &cUsage&7: /pk xp grant &cplayer xp"
+unknown_player: "&8[&c*&8] &7That &cplayer &7does not exist!"
+player_never_joined: "&8[&c*&8] &7That &cplayer &7has never joined &cScoville &7before!"
+pk_xp_revoke_help: "&8[&c*&8] &cUsage&7: /pk xp revoke &cplayer xp"
+pk_xp_set_help: "&8[&c*&8] &cUsage&7: /pk xp set &cplayer xp"
+set_xp: "&8[&a*&8] &7Set &a{0}&7''s XP from &a{1} &7to &a{2}&7!"
