--- a/src/main/resources/strings-en.yml
+++ b/src/main/resources/strings-en.yml
@@ -432,7 +432,7 @@ achievement_lawabidingcitizen_desc: "Testify in court"
 achievement_notapyramidscheme: "Not a Pyramid Scheme"
 achievement_notapyramidscheme_desc: "Beat \"Melonaire\" in over an hour"
 achievement_publicpolicyinfluencer: "Public Policy Influencer"
-achievement_publicpolicyinfluencer_desc: "Find the secret room in the lobby"
+achievement_publicpolicyinfluencer_desc: "Find the puzzle room in the hub"
 achievement_flavortown: "Flavortown"
 achievement_flavortown_desc: "Beat at least one course of each difficulty"
 achievement_ign: "IGN"
@@ -457,3 +457,5 @@ player_never_joined: "&8[&c*&8] &7That &cplayer &7has never joined &cScoville &7
 pk_xp_revoke_help: "&8[&c*&8] &cUsage&7: /pk xp revoke &cplayer xp"
 pk_xp_set_help: "&8[&c*&8] &cUsage&7: /pk xp set &cplayer xp"
 set_xp: "&8[&a*&8] &7Set &a{0}&7''s XP from &a{1} &7to &a{2}&7!"
+achievement_monkeyingaround: "Monkeying Around"
+achievement_monkeyingaround_desc: "ooh ooh aAH AAH AHHH"
