- Add /lb remove time and /lb remove beaten  - Add practice items for Set CP and Fly  - Remove fire ticks after exiting lava

--- a/src/main/resources/strings-en.yml
+++ b/src/main/resources/strings-en.yml
@@ -459,3 +459,11 @@ pk_xp_set_help: "&8[&c*&8] &cUsage&7: /pk xp set &cplayer xp"
 set_xp: "&8[&a*&8] &7Set &a{0}&7''s XP from &a{1} &7to &a{2}&7!"
 achievement_monkeyingaround: "Monkeying Around"
 achievement_monkeyingaround_desc: "ooh ooh aAH AAH AHHH"
+leaderboard_remove_time_success: "&8[&c*&8] &7Removed &c{0}''s time &7from the &c{1} &7leaderboard!"
+leaderboard_remove_time_help: "&8[&c*&8] &7Usage: /lb remove time &cusername course"
+leaderboard_remove_beaten_success: "&8[&c*&8] &7Set &c{0}''s &7times completed on &c{1} &7to &c{2}&7!"
+leaderboard_remove_beaten_help: "&8[&c*&8] &7Usage: /lb remove beaten &cusername times course"
+set_cp: "&8[&a*&8] &7Set your &apractice &7CP!"
+set_cp_name: "&2&lSet Checkpoint"
+practice_fly_name: "&b&lToggle Fly"
+invalid_args: "&8[&c*&8] &7Invalid &carguments&7!"
