--- a/src/main/resources/strings-en.yml
+++ b/src/main/resources/strings-en.yml
@@ -467,3 +467,4 @@ set_cp: "&8[&a*&8] &7Set your &apractice &7CP!"
 set_cp_name: "&2&lSet Checkpoint"
 practice_fly_name: "&b&lToggle Fly"
 invalid_args: "&8[&c*&8] &7Invalid &carguments&7!"
+ragequit_message: "&8[&c*&8] &c{0} &7has &4&lR&c&lA&4&lG&c&lE&4&lQ&c&lU&4&lI&c&lT&7!"
