- Added Leveling Inventory

--- a/src/main/resources/level_grants.yml
+++ b/src/main/resources/level_grants.yml
@@ -2,12 +2,12 @@
 "4": ["scoville.emote.smile", "scoville.emote.frown", "scoville.emote.heart"]
 "6": ["trails.magic"]
 "8": ["scoville.hotbar.flower_power"]
-"10": ["multiverse.access.practice_world"]
+"10": ["fawe.permpack.basic"]
 "12": ["libsdisguises.disguise.pig"]
 "14": ["scoville.message.mr_cool"]
 "16": ["trails.endrod"]
 "18": ["scoville.hotbar.sweets"]
-"20": ["scoville.ragequit.command", "plots.plot.2", "plots.auto.2", "worldedit.help", "worldedit.history.undo.self", "worldedit.history.redo.self", "worldedit.history.clear"] # WorldEdit Permission
+"20": ["scoville.ragequit.command", "plots.plot.2", "plots.auto.2", "scoville.radio"] # WorldEdit Permission
 "22": ["libsdisguises.disguise.creeper"]
 "24": ["scoville.emote.gg", "scovile.emote.rip"]
 "26": ["trails.flame"]
@@ -22,18 +22,18 @@
 "44": ["scoville.emote.win", "scoville.emote.fail"]
 "46": ["trails.crit"]
 "48": ["scoville.hotbar.spudtacular"]
-"50": ["scoville.radio"]
+"50": ["scoville.winmessage.option.times", "scoville.winmessage.spicy"]
 "52": ["libsdisguises.disguise.parrot"]
 "54": ["scoville.message.superhero"]
 "56": ["trails.particles"]
 "58": ["scoville.hotbar.melonaire"]
-"60": ["scoville.winmessage.option.times", "scoville.winmessage.spicy", "scoville.winmessage.disbelief", "scoville.winmessage.reverse", "plots.plot.4", "plots.auto.4"]
+"60": ["scoville.winmessage.disbelief", "scoville.winmessage.reverse", "plots.plot.4", "plots.auto.4"]
 "62": ["libsdisguises.disguise.wither_skeleton"]
 "64": ["scoville.emote.tableflip", "scoville.emote.shrug"]
 "66": ["trails.note"]
 "68": ["scoville.hotbar.engineer"]
 "70": [] # Customizeable Leather Armor
-"72": ["libsdisguises.disguise.wither_vex"]
+"72": ["libsdisguises.disguise.vex"]
 "74": ["scoville.message.aviation"]
 "76": ["trails.damage"]
 "78": ["scoville.hotbar.bling"]
