--- a/src/main/resources/strings-en.yml
+++ b/src/main/resources/strings-en.yml
@@ -470,53 +470,53 @@ invalid_args: "&8[&c*&8] &7Invalid &carguments&7!"
 ragequit_message: "&8[&c*&8] &c{0} &7has &4&lR&c&lA&4&lG&c&lE&4&lQ&c&lU&4&lI&c&lT&7!"
 level_2_desc: ["&7Cow Disguise", "&8 - /disguise cow"]
 level_4_desc: ["&e\u263a &7Emote", "&8 - :smile:", "&9\u2639 &7Emote", "&8 - :frown:", "&c\u2764 &7Emote", "&8 - :heart:"]
-level_6_desc: ["&7Magic Trail", "&8 - /trails"]
+level_6_desc: ["&7Magic Trail", "&8 - /trail"]
 level_8_desc: ["&7Flower Power Hotbar", "&8 - /hotbars"]
 level_10_desc: ["&7WorldEdit in Plot World", "&8 - //help"]
 level_12_desc: ["&7Pig Disguise", "&8 - /disguise pig"]
 level_14_desc: ["&7Mr. Cool Join Message", "&8 - /joinmessages"]
-level_16_desc: ["&7End Rod Trail", "&8 - /trails"]
+level_16_desc: ["&7End Rod Trail", "&8 - /trail"]
 level_18_desc: ["&7Sweet Treats Hotbar", "&8 - /hotbars"]
 level_20_desc: ["&7Ragequit Command", "&8 - /ragequit", "&7Radio", "&8 - /radio", "&7+1 Plot", "&8 - /plotme"]
 level_22_desc: ["&7Creeper Disguise", "&8 - /disguise creeper"]
 level_24_desc: ["&2&lG&a&lG&f&l! &7Emote", "&8 - :gg:", "&8&lR&7&lI&f&lP &7Emote", "&8 - :rip:"]
-level_26_desc: ["&7Flame Trail", "&8 - /trails"]
+level_26_desc: ["&7Flame Trail", "&8 - /trail"]
 level_28_desc: ["&7Farmhand Hotbar", "&8 - /hotbars"]
 level_30_desc: ["&7Leet Win Message", "&8 - /winmessages", "&7Conquistador Win Message", "&8 - /winmessages"]
 level_32_desc: ["&7Sheep Disguise", "&8 - /disguise sheep"]
 level_34_desc: ["&7Shakespeare Join Message", "&8 - /joinmessages"]
-level_36_Desc: ["&7Cloud Trail", "&8 - /trails"]
+level_36_desc: ["&7Cloud Trail", "&8 - /trail"]
 level_38_desc: ["&7Fishmonger Hotbar", "&8 - /hotbars"]
 level_40_desc: ["&dLight Purple &7Chatcolor", "&8 - /chatcolor"]
 level_42_desc: ["&7Pigman Disguise", "&8 - /disguise pig_zombie"]
 level_44_desc: ["&a&lWIN &2&l\u2714 &7Emote", "&8 - :win:", "&c&lFAIL &4&l\u2718 &7Emote", "&8 - :fail:"]
-level_46_desc: ["&7Crit Trail", "&8 - /trails"]
+level_46_desc: ["&7Crit Trail", "&8 - /trail"]
 level_48_desc: ["&7Spudtacular Hotbar", "&8 - /hotbars"]
 level_50_desc: ["&7Times Completed Win Mesage Option", "&8 - /winmessages", "&7Spicy Win Message", "&8 - /winmessages"]
 level_52_desc: ["&7Parrot Disguise", "&8 - /disguise parrot"]
 level_54_desc: ["&7Superhero Join Message", "&8 - /joinmessages"]
-level_56_desc: ["&7Particle Trail", "&8 - /trails"]
+level_56_desc: ["&7Particle Trail", "&8 - /trail"]
 level_58_desc: ["&7One in a Melon Hotbar", "&8 - /hotbars"]
 level_60_desc: ["&7Disbelief Win Message", "&8 - /winmessages", "&7Reverse Win Message", "&8 - /winmessages", "&7+1 Plot", "&8 - /plotme"]
 level_62_desc: ["&7Wither Skeleton Disguise", "&8 - /disguise wither_skeleton"]
 level_64_desc: ["&e(\u256F&f°&e\u25A1&f°&e)\u256F&7\uFE35&6\u253B\u2501\u253B &7Emote", "&8 - :tableflip:", "&e¯\\_(\u30C4)_/¯ &7Emote", "&8 - :shrug:"]
-level_66_desc: ["&7Note Trail", "&8 - /trails"]
+level_66_desc: ["&7Note Trail", "&8 - /trail"]
 level_68_desc: ["&7Engineer Hotbar", "&8 - /hotbars"]
 level_70_desc: ["&7Customizable Leather Armor", "&8 - /armor"]
 level_72_desc: ["&7Vex Disguise", "&8 - /disguise vex"]
 level_74_desc: ["&7Aviation Join Message", "&8 - /joinmessages"]
-level_76_desc: ["&7Damage Trail", "&8 - /trails"]
+level_76_desc: ["&7Damage Trail", "&8 - /trail"]
 level_78_desc: ["&7Bling Bling Hotbar", "&8 - /hotbars"]
 level_80_desc: ["&5Purple &7Chatcolor", "&8 - /chatcolor"]
 level_82_desc: ["&7Blaze Disguise", "&8 - /disguise blaze"]
 level_84_desc: ["&c\u30FD&6(&e°&a\u3007&b°&d)&5\uFF89 &7Emote", "&8 - :pog:", "&e\u2055&6\u272D&e\u2055 &d\\(&e☆&d\u03C9&e☆&d)/ &e\u2055&6\u272D&e\u2055 &7Emote", "&8 - :owo:"]
-level_86_desc: ["&7Totem Trail", "&8 - /trails"]
+level_86_desc: ["&7Totem Trail", "&8 - /trail"]
 level_88_desc: ["&7Hot Hands Hotbar", "&8 - /hotbars"]
 level_90_desc: ["&7Rainbow Win Message Option", "&8 - /winmessages", "&7Hype Win Message", "&8 - /winmessages", "&7Daily Win Message", "&8 - /winmessages", "&7Robotic Win Message", "&8 - /winmessages"]
 level_92_desc: ["&7Block Disguise", "&8 - /disguise block"]
 level_94_desc: ["&7Monarch Join Message", "&8 - /joinmessages"]
-level_96_desc: ["&7Rainbow Trail", "&8 - /trails"]
-level_98_desc: ["&8Endgame Hotbar", "&8 - /hotbars"]
+level_96_desc: ["&7Rainbow Trail", "&8 - /trail"]
+level_98_desc: ["&7Endgame Hotbar", "&8 - /hotbars"]
 level_100_desc: ["&c&l100"]
 leveling_inventory_title: "&8Leveling Inventory"
 leveling_inventory_level_title: "&a&lLevel {0}"
